--- a/starwars-ui/src/app/home/home.component.html
+++ b/starwars-ui/src/app/home/home.component.html
@@ -5,11 +5,13 @@
       <h1 class="menu-title">STAR WARS</h1>
       <span class="glyph-symbol-jedi">$</span>
     </div>
-    <h2 class="menu-subtitle">EXPLORE THE GALAXY</h2>
+    <h2 class="menu-subtitle">EXPLoRE THE GALAXY</h2>
 
-    <button routerLink="/people" class="menu-btn">CHARACTERS</button>
+    <button routerLink="/character" class="menu-btn">CHARACTERS</button>
     <button routerLink="/planets" class="menu-btn">PLANETS</button>
-    <button routerLink="/ships" class="menu-btn">STARSHiPS</button>
-    <button routerLink="/movies" class="menu-btn">MoviES</button>
+    <button routerLink="/species" class="menu-btn">SPECiES</button>
+    <button routerLink="/starships" class="menu-btn">STARSHiPS</button>
+    <button routerLink="/vehicles" class="menu-btn">vEHiCLES</button>
+    <button routerLink="/films" class="menu-btn">FiLMS</button>
   </div>
 </div>
