--- a/starwars-ui/src/app/home/home.component.scss
+++ b/starwars-ui/src/app/home/home.component.scss
@@ -79,3 +79,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.glyph-symbol-special {
+  font-family: 'Star Jedi Special', sans-serif;
+  font-size: 8rem;
+  color: #ffe81f;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
