--- a/starwars-ui/src/app/character/character.component.scss
+++ b/starwars-ui/src/app/character/character.component.scss
@@ -1,4 +1,4 @@
-.planets-container {
+.character-container {
     background-color: rgba(0, 0, 0, 0.75);
     padding: 2rem;
     border-radius: 8px;
@@ -132,7 +132,7 @@
 
     .glyph-symbol-special {
       font-family: 'Star Jedi Special', sans-serif;
-      font-size: 8rem;
+      font-size: 7rem;
       color: #ffe81f;
       line-height: 1;
       display: flex;
@@ -279,10 +279,35 @@
         padding: 0.4rem 1rem;
       }
 
-      .glyph-symbol-special {
-        font-size: 5rem;
-      }
     }
+
+  .action-buttons {
+    display: flex;
+    gap: 0.5rem;
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  .btn-add {
+    margin-bottom: 1rem;
+    background-color: #ffe81f;
+    color: #000;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    font-family: 'Orbitron', monospace;
+    cursor: pointer;
+    box-shadow: 0 0 8px #ffe81f;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: #000;
+      color: #ffe81f;
+    }
+  }
 
   .pagination {
     gap: 1rem;
