--- a/starwars-ui/src/app/species/species.component.scss
+++ b/starwars-ui/src/app/species/species.component.scss
@@ -1,4 +1,4 @@
-.planets-container {
+.species-container {
     background-color: rgba(0, 0, 0, 0.75);
     padding: 2rem;
     border-radius: 8px;
@@ -197,7 +197,6 @@
     .modal-content strong {
       color: #ffc107;
       font-weight: bold;
-      margin-bottom: 80rem;
     }
 
     .modal-content .extra {
@@ -205,16 +204,6 @@
       width: 100%;
     }
 
-    .modal-content p {
-      margin: 0.6rem 0;
-      line-height: 2;
-      text-align: justify;
-    }
-
-    .modal-content p strong {
-      color: #ffc107;
-      font-weight: bold;
-    }
     .modal-content button {
       margin-top: 1.5rem;
       background-color: #ffe81f;
@@ -309,4 +298,5 @@
       padding: 0 0.3rem;
     }
   }
+
 }
